--- a/FoodApp/FoodApp.iOS/FoodApp.iOS.csproj
+++ b/FoodApp/FoodApp.iOS/FoodApp.iOS.csproj
@@ -123,6 +123,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper">
+      <Version>10.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Fody">
       <Version>6.3.0</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
