EdamanService, add info about food functionally

--- a/FoodApp/FoodApp.Android/FoodApp.Android.csproj
+++ b/FoodApp/FoodApp.Android/FoodApp.Android.csproj
@@ -124,4 +124,9 @@
     <AndroidResource Include="Resources\mipmap-hdpi\icon_food.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionFoodAppAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
