add simple look for recipies by user searching, add icons for main tabbed page

--- a/FoodApp/FoodApp.Android/FoodApp.Android.csproj
+++ b/FoodApp/FoodApp.Android/FoodApp.Android.csproj
@@ -111,7 +111,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\profile_icon.png" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FoodApp\FoodApp.csproj">
       <Project>{99501D52-FB0C-4415-89A6-5229E4FB0710}</Project>
@@ -123,6 +125,15 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\question_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\search_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\add_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\history_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
