--- a/FoodApp/FoodApp.Android/FoodApp.Android.csproj
+++ b/FoodApp/FoodApp.Android/FoodApp.Android.csproj
@@ -80,6 +80,9 @@
     <PackageReference Include="Unity">
       <Version>5.11.7</Version>
     </PackageReference>
+    <PackageReference Include="VG.XFShapeView">
+      <Version>1.0.5</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
@@ -138,7 +141,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionFoodAppAndroidHideInfoBar="True" XamarinHotReloadUnhandledDeviceExceptionFoodAppAndroidHideInfoBar="True" />
+      <UserProperties XamarinHotReloadUnhandledDeviceExceptionFoodAppAndroidHideInfoBar="True" XamarinHotReloadDebuggerTimeoutExceptionFoodAppAndroidHideInfoBar="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
