--- a/FoodApp/FoodApp.iOS/FoodApp.iOS.csproj
+++ b/FoodApp/FoodApp.iOS/FoodApp.iOS.csproj
@@ -149,6 +149,9 @@
     <PackageReference Include="Unity">
       <Version>5.11.7</Version>
     </PackageReference>
+    <PackageReference Include="VG.XFShapeView">
+      <Version>1.0.5</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
